# rxcv

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
docs/: imgproc.md
examples/: convert_format.rs  filter2d.rs  threshold.rs
include/: ffi.hpp
lib/: core.cpp  imgcodecs.cpp  imgproc.cpp
scripts/: setup.sh
src/: lib.rs  result.rs
src/core/: array.rs  bytes.rs  consts.rs  contours.rs  mat.rs  mod.rs
src/ffi/: mod.rs
src/imgcodecs/: consts.rs  decode.rs  encode.rs  mod.rs  read.rs  write.rs
src/imgproc/: bilateral.rs  consts.rs  cvt_color.rs  filter.rs  find_contours.rs  median_blur.rs  mod.rs  threshold.rs
src/imgproc/geometric_image_transformations/: convert_maps.rs  get_rect_sub_pix.rs  invert_affine_transform.rs  mod.rs  remap.rs  resize.rs  warp_polar.rs
src/imgproc/image_filtering/: bilateral.rs  blur.rs  box_filter.rs  dilate.rs  erode.rs  filter2d.rs  gaussian_blur.rs  laplacian.rs  median_blur.rs  mod.rs  morphology_ex.rs  pyr_down.rs  pyr_up.rs  scharr.rs  sep_filter2d.rs  sobel.rs  spatial_gradient.rs  sqr_box_filter.rs
src/imgproc/miscellaneous_image_transformations/: adaptive_threshold.rs  blend_linear.rs  distance_transform.rs  flood_fill.rs  mod.rs
src/ndarray/: mod.rs
