[package]
name = "rxcv"
version = "0.1.0-alpha.3"
authors = ["Chordizm"]
description = "RxCV provide Rust programming experience to OpenCV."
categories = ["computer-vision", "api-bindings"]
keywords = ["rxcv", "opencv"]
edition = "2021"
license = "MIT OR Apache-2.0"
exclude = [".gitignore", ".github/**", ".devcontainer/**", "mock"]
readme = "README.md"
repository = "https://github.com/chordizm/rxcv"

[dependencies]
bitflags = "1.3"
ndarray = "0.15"

[build-dependencies]
cc = "1.0"
